--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -7,6 +7,8 @@ output:
 editor_options:
   chunk_output_type: console
 ---
+# cTWAS paper figures
+  * [cTWAS paper figures](ctwas_paper_figures.html)
 
 # Data
 
