--- a/analysis/ctwas_paper_figures.Rmd
+++ b/analysis/ctwas_paper_figures.Rmd
@@ -14,6 +14,7 @@ library(data.table)
 library(ggplot2)
 source("/project/xinhe/shengqian/cTWAS_paper_figures/plot_function.R")
 ```
+
 ### Incorporating multiple modality and tissues improves discovery power
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 source("/project/xinhe/xsun/multi_group_ctwas/data/samplesize.R")
@@ -54,3 +55,56 @@ plots <- plot_number_of_signals_per_region_distributions(
 print(plots)
 ```
 
+### Compare with TGFM: compare with genes found in the paper. Show that unique genes by cTWAS are valid
+For unique genes identified by M-cTWAS and TGFM, I plotted the distribution of POPS scores and showed that M-cTWAS unique genes have higher POPS score than TGFM unique genes.
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+library(grex)
+library(ggplot2)
+trait_list <- list("LDL-ukb-d-30780_irnt" = "/project/xinhe/xsun/multi_group_ctwas/data/tgfm/GTEx_TGFM_PIPs_biochemistry_LDLdirect.txt",
+                   "HTN-panukb" = "/project/xinhe/xsun/multi_group_ctwas/data/tgfm/GTEx_TGFM_PIPs_disease_HYPERTENSION_DIAGNOSED.txt")
+for(i in names(trait_list)){
+  ctwas_folder_results <- "/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/snakemake_outputs/"
+  ctwas_genes <-  readRDS(paste0(ctwas_folder_results,i,"/",i,".3qtls.combined_pip_rmmapping_bygroup_final.RDS"))
+  ctwas_genes_highpip <- ctwas_genes$gene_name[ctwas_genes$combined_pip > 0.8]
+  tgfm_genes <- data.table::fread(trait_list[[i]])
+  tgfm_genes_highpip <- tgfm_genes[tgfm_genes$TGFM_PIP > 0.8,]
+  tgfm_genes_highpip <- tgfm_genes_highpip[tgfm_genes_highpip$genetic_element_class != "variant",]
+  tgfm_genes_highpip$ensg_id <- sub("\\..*", "", tgfm_genes_highpip$genetic_element_name)
+  tgfm_genes_highpip_ensg <- unique(tgfm_genes_highpip$ensg_id)
+  library(EnsDb.Hsapiens.v86)
+  ensg_to_symbol <- AnnotationDbi::select(
+    EnsDb.Hsapiens.v86,
+    keys = tgfm_genes_highpip_ensg,
+    keytype = "GENEID",
+    columns = c("GENEID", "SYMBOL")
+  )
+
+  tgfm_genes_highpip <- ensg_to_symbol$SYMBOL
+  ctwas_unique_genes <- setdiff(ctwas_genes_highpip,tgfm_genes_highpip)
+  tgfm_unique_genes <- setdiff(tgfm_genes_highpip,ctwas_genes_highpip)
+  p1 <- plot_overlap_barplot_cTWAS_vs_TGFM(ctwas_genes_highpip = ctwas_genes_highpip, tgfm_genes_highpip_symbol = tgfm_genes_highpip,trait = i,return_unique_genes = F)
+  
+  pops <- fread(paste0("/project/xinhe/shengqian/pops/pops_full_features_output/",i,"_pops/",i,".preds"))
+  df <- grex(cleanid(pops$ENSGID))
+  pops <- cbind(pops,df)
+  tgfm_gene <- pops[pops$hgnc_symbol %in% tgfm_unique_genes,]
+  ctwas_gene <- pops[pops$hgnc_symbol %in% ctwas_unique_genes,]
+
+  # Combine into one data frame
+  df <- data.frame(
+    score = c(tgfm_gene$PoPS_Score, ctwas_gene$PoPS_Score),
+    group = c(rep("TGFM", length(tgfm_gene$PoPS_Score)),
+            rep("cTWAS", length(ctwas_gene$PoPS_Score)))
+  )
+
+  # Boxplot
+  p2 <- ggplot(df, aes(x = group, y = score, fill = group)) +
+    geom_boxplot(alpha = 0.5) +
+    scale_fill_manual(values = c("blue", "red")) +
+    theme_minimal(base_size = 14) +
+    labs(title = i, x = "", y = "PoPS Score",fill = "")
+  
+  combined_plot <- (p1 | p2) + plot_layout(guides = "collect") & theme(legend.position = "bottom")
+  print(combined_plot)
+}
+```
