--- a/analysis/ctwas_paper_figures.Rmd
+++ b/analysis/ctwas_paper_figures.Rmd
@@ -201,4 +201,6 @@ grid.newpage()
 if(nrow(combined_pip_by_context_multi_unique) > 0) {
   p2 <- plot_heatmap(heatmap_data = combined_pip_by_context_multi_unique, main = paste0("New genes identified by multicontext analysis, PIP>",PIP_cutoff),showPIP = T)
 }
+print(p1)
+print(p2)
 ```
